# OPPPO_labs

./: CharSubstitutionEncText.cpp  CharSubstitutionEncText.h  CyclicalShiftEncText.cpp  CyclicalShiftEncText.h  EncryptedText.cpp  EncryptedText.h  Kulaev_Sergey_KI17-08B.docx  Lexeme.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  List.h  ReadJSON.cpp  ReadJSON.h  Symbol.h  SyntacticalAnalyzer.cpp  SyntacticalAnalyzer.h  Transliterator.cpp  Transliterator.h  VigenereEncText.cpp  VigenereEncText.h  main.cpp  meson.build
tests/: log_cmd.txt  start_tests.bat  ~$исание.docx  Описание.docx
tests/actual_result/: out_2.txt  out_3.txt  out_5.txt  out_7.txt  out_8.txt
tests/expected_results/: out_4.txt
tests/input_data/: in_10.txt  in_11.txt  in_12.txt  in_13.txt  in_2.txt  in_6.txt  in_8.txt  in_9.txt
