project('OPPPO_LAB1', 'cpp') 

incdir = include_directories('.') 

src = [ 
'main.cpp', 
'CharSubstitutionEncText.cpp', 
'CyclicalShiftEncText.cpp', 
'EncryptedText.cpp', 
'Lexeme.cpp', 
'LexicalAnalyzer.cpp', 
'ReadJSON.cpp', 
'Symbol.cpp', 
'SyntacticalAnalyzer.cpp', 
'Transliterator.cpp', 
'VigenereEncText.cpp' 
] 

executable( 
'demo', 
sources: src, 
include_directories: incdir 
)